source/formulaforce/main/objects/Team__c/fields/Active_Since__c.field-meta.xml
<CustomField>
    <fullName>Active_Since__c</fullName>
    <label>Active Since</label>
    <length>4</length>
    <type>Text</type>
</CustomField>