source/formulaforce/main/objects/Team__c/fields/Home_Base__c.field-meta.xml
<CustomField>
    <fullName>Home_Base__c</fullName>
    <description>deprecated - DO NOT USE</description>
    <label>Home Base (deprecated)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>