source/formulaforce/main/objects/Team__c/fields/Team_Boss__c.field-meta.xml
<CustomField>
    <fullName>Team_Boss__c</fullName>
    <description>deprecated - DO NOT USE</description>
    <label>Team Boss (deprecated</label>
    <length>100</length>
    <type>Text</type>
</CustomField>