source/formulaforce/main/objects/Team__c/fields/Team_Id__c.field-meta.xml
<CustomField>
    <fullName>Team_Id__c</fullName>
    <description>deprecated - DO NOT USE</description>
    <label>Team Id (deprecated)</label>
    <length>5</length>
    <type>Text</type>
</CustomField>