source/formulaforce/main/objects/Team__c/fields/Team_Reference__c.field-meta.xml
<CustomField>
    <fullName>Team_Reference__c</fullName>
    <label>Team Reference</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>