source/formulaforce/main/objects/Team__c/fields/Testing_Distance__c.field-meta.xml
<CustomField>
    <fullName>Testing_Distance__c</fullName>
    <label>Testing Distance</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>