source/formulaforce/main/objects/Team__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Nationality__c</columns>
    <columns>Home_Base__c</columns>
    <columns>Active_Since__c</columns>
    <columns>Team_Boss__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>